--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,23 @@
 .carousel {
-    max-width: 600px;
+    width: 600px; 
     position: relative;
 }
 
 .carousel .carousel-item {
-    display: none;
+   display: none;
 }
 
 .carousel .carousel-item-visible {
     display: block;
+  
 }
 
 .carousel .carousel-item img {
+    
     width: 100%;
     max-width: 600px;
     height: auto;
+    
 }
 
 .carousel .carousel-actions {
@@ -23,6 +26,7 @@
     justify-content: space-between;
     position: absolute;
     top: 50%;
+    transform: translateY(-50%);
 }
 
 .carousel .carousel-actions button {
@@ -34,6 +38,7 @@
     cursor: pointer;
     width: 40px;
     height: 40px;
+
 }
 
 .carousel .carousel-actions button#carousel-button-prev {
