--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     position: relative;
 }
 
-.carousel .carousel-item {
+.carousel .carousel-item, .carousel .carousel-item-hidden {
    display: none;
 }
 
@@ -16,7 +16,7 @@
     
     width: 100%;
     max-width: 600px;
-    height: auto;
+    max-height: 400px;
     
 }
 
